RESOLVED FIXED43037
[Qt] Incorrect input method hints
https://bugs.webkit.org/show_bug.cgi?id=43037
Summary [Qt] Incorrect input method hints
Simon Hausmann
Reported 2010-07-27 03:33:02 PDT
When activating input fields with different types (email, url, password, etc.) the corresponding input method hints on QWebView/QGraphicsWebView are set. However sometimes they are not set correctly, for example when activating a url field ImhUrlCharactersOnly is set. When afterwards activating a password field the ImhUrlCharactersOnly hint is still set, in addition to the ImhHiddenText hint.
Attachments
Patch (5.24 KB, patch)
2010-07-27 03:36 PDT, Simon Hausmann
no flags
Patch (5.36 KB, patch)
2010-07-27 03:51 PDT, Simon Hausmann
vestbo: review+
Simon Hausmann
Comment 1 2010-07-27 03:36:52 PDT
Simon Hausmann
Comment 2 2010-07-27 03:51:09 PDT
Simon Hausmann
Comment 3 2010-07-27 04:49:03 PDT
Simon Hausmann
Comment 4 2010-07-27 04:51:14 PDT
cherry-picked into qtwebkit-4.6 with commit d521d7d81e8f0297c94be9ebd8af67ee130d0edb
Simon Hausmann
Comment 5 2010-07-29 08:05:48 PDT
Revision r64120 cherry-picked into qtwebkit-2.1 with commit c4412336e352090f84391e5844c754f7caaaa85f
Simon Hausmann
Comment 6 2010-08-03 05:07:53 PDT
Revision r64120 cherry-picked into qtwebkit-2.0 with commit 9b5e57a5da1cf975ba84971fce9a1f67c6b7c2e2
Note You need to log in before you can comment on or make changes to this bug.