[Qt] Incorrect input method hints https://bugs.webkit.org/show_bug.cgi?id=43037

Reviewed by Tor Arne Vestbø.

Properly set or reset all input method hints when
activating input fields.

* WebCoreSupport/EditorClientQt.cpp:
(WebCore::EditorClientQt::setInputMethodState):
* tests/qwebview/tst_qwebview.cpp:
(tst_QWebView::focusInputTypes): Extended unit test to verify that we
reset hints.

Canonical link: https://commits.webkit.org/54948@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@64120 268f45cc-cd09-0410-ab3c-d52691b4dbfc